@@ -322,6 +322,12 @@ spam_maxlen_help					Maximal length of chat message.
 spam_autokick_help					Spam score that causes you to get kicked instantly.
 silence_all_help					If set to 1, all chat messages will be omitted.
 
+# spam kick messages
+spam_chat                   You chatted too much.
+spam_teamchage              You switched teams too often.
+spam_vote_kick_issue        You issued too many kick votes.
+spam_vote_rejected          Too many of your votes got rejected.
+
 #********************************************
 #********************************************
 #
@@ -416,7 +422,11 @@ camera_forbid_in_help		Forbids the use of the internal camera on all clients
 camera_forbid_free_help		Forbids the use of the free camera on all clients
 camera_forbid_follow_help	Forbids the use of the fixed external camera on all clients
 camera_forbid_custom_help	Forbids the use of the custom camera on all clients
-camera_forbid_server_custom_help  Forbid the use of the server custom camera? 
+camera_forbid_server_custom_help  Forbids the use of the server custom camera
+
+camera_forbid_custom_glance_help                 Forbids use of special glance camera settings
+camera_override_custom_glance_help               Overrides custom glance settings with vanues from the server
+camera_override_custom_glance_server_custom_help Overrides custom glance settings with vanues from the server only for the server custom camera
 
 camera_follow_start_x_help	Start position of the fixed external camera
 camera_follow_start_y_help	Start position of the fixed external camera
@@ -449,6 +459,18 @@ camera_server_custom_rise_fromspeed_help		This value is multiplied with the curr
 camera_server_custom_pitch_help		Position of the custom camera: how much does it look up/down?
 camera_server_custom_turn_speed_help Speed the server custom camera turns with. Turn values are taken from the clientside settings if this is negative.
 camera_server_custom_turn_speed_180_help Extra factor to CAMERA_SERVER_CUSTOM_TURN_SPEED after a quick reverse
+
+camera_glance_back_help		Position of the glance camera: how much is it moved back from the cycle?
+camera_glance_rise_help		Position of the glance camera: how much is it moved up from the cycle?
+camera_glance_back_fromspeed_help		This value is multiplied with the current speed and added to CAMERA_GLANCE_BACK.
+camera_glance_rise_fromspeed_help		This value is multiplied with the current speed and added to CAMERA_GLANCE_RISE.
+camera_glance_pitch_help	Position of the glance camera: how much does it look up/down?
+
+camera_server_glance_back_help		Position of the server glance camera: how much is it moved back from the cycle?
+camera_server_glance_rise_help		Position of the server glance camera: how much is it moved up from the cycle?
+camera_server_glance_back_fromspeed_help		This value is multiplied with the current speed and added to CAMERA_SERVER_GLANCE_BACK.
+camera_server_glance_rise_fromspeed_help		This value is multiplied with the current speed and added to CAMERA_SERVER_GLANCE_RISE.
+camera_server_glance_pitch_help		Position of the server glance camera: how much does it look up/down?
 
 camera_visibility_recovery_speed_help The speed the external visibility targets recovers from wall hits
 camera_visibility_wall_distance_help  The distance the visibility targets keep from walls
@@ -2146,6 +2168,7 @@ network_login_relabeling	Relabeling NetObjects...\n
 network_login_sync2		Syncing again...\n
 network_login_done		Done!\n
 
+network_kill_log            User \1 kicked, reason given to him: \2\n
 network_kill_preface		Reason given by server:
 network_kill_maxidgrabber	It ran out of IDs; your client was the one occupying most of them for himself. The reason for this can be a bug.
 network_kill_maxiduser		It ran out of IDs; your client was the one occupying most of them.
@@ -2189,7 +2212,7 @@ vote_rejected						Poll "\1" has been rejected. (\2 Players voted for the poll, 
 vote_timeout						Poll "\1" timed out.\n
 vote_new							New poll: "\1". Enter the main menu vote on it.\n
 vote_redundant                      Poll rejected, same suggestion was made already.\n
-vote_maturity                       Poll rejected, you're not old enough to issue votes.\n
+vote_maturity                       Poll rejected, you're not old enough to issue votes, wait \1 seconds.\n
 vote_overflow						Poll rejected, too many pending polls.\n
 vote_disabled						Poll rejected, disabled by server admin.\n
 vote_disabled_spectator				Poll/Vote rejected, disabled for spectators by server admin.\n
